--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		</section>
 	</main>
 	<footer>
-		<p><strong>&copy;2018 - Mattis Meeuwesse - Inholland</strong></p>
+		<aside><p>&copy; 2018 - Mattis Meeuwesse - Inholland</p></aside>
 	</footer>
 </body>
 
