--- a/product.html
+++ b/product.html
@@ -1,6 +1,125 @@
-COMPANY NAME
-Home
-Blog
-Contact
-product catalog
-2018 - Mattis Meeuwesse - Inholland 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+  <meta charset="UTF-8">
+  <meta name="keywords" content="Mobile, Board, Console, Games, Gaming, Fun, Products, Entertainment, Playstation, Android">
+  <meta name="description" content="Entertainment">
+  <meta name="author" content="Mattis Meeuwesse">
+
+
+  <title>Products - Company name</title>
+
+  <link rel="stylesheet" type="text/css" href="css/product.css">
+
+
+  <link rel="apple-touch-icon" sizes="57x57" href="./favicons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="./favicons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="./favicons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="./favicons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="./favicons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="./favicons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="./favicons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="./favicons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="./favicons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="./favicons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png">
+  <link rel="manifest" href="./favicons/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="./favicons/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="viewport" content="width=device-width">
+</head>
+
+<body>
+
+  <video autoplay muted loop poster="./img/background.jpeg" id="backgroundVideo">
+    <source src="./movie/background.mp4" type="video/mp4">
+    </video>
+
+    <header class="banner-top">
+      <h1>COMPANY NAME</h1>
+    </header>
+
+    <nav class="navigation-bar">
+      <a href="./index.html" class="no-underline">home</a>
+      <a href="https://www.blogger.com" class="no-underline">blog</a>
+      <a href="./contact.html" class="no-underline">contact</a>
+    </nav>
+    <main>
+      <section class="section-header">
+        <h2>Product catalog</h2>
+      </section>
+      <section class="mobile-section-header">
+        <h2>products</h2>
+      </section>
+      <section class="section-container">
+        <section class="section-product">
+          <figure>
+            <img src="./img/product1.jpg">
+          </figure>
+        </section>
+        <section class="section-product">
+          <figure>
+            <img src="./img/product2.jpg">
+          </figure>
+        </section>
+        <section class="section-product">
+          <figure>
+            <img src="./img/product3.jpg">
+          </figure>
+        </section>
+        <section class="section-product">
+          <figure>
+            <img src="./img/product4.jpg">
+          </figure>
+        </section>
+        <section class="section-product">
+          <figure>
+            <img src="./img/product5.jpg">
+          </figure>
+        </section>
+        <section class="section-product">
+          <figure>
+            <img src="./img/product6.jpg">
+          </figure>
+        </section>
+        <section class="section-product">
+          <figure>
+            <img src="./img/product7.jpg">
+          </figure>
+        </section>
+        <section class="section-product">
+          <figure>
+            <img src="./img/product8.jpg">
+          </figure>
+        </section>
+        <section class="section-product">
+          <figure>
+            <img src="./img/product9.jpg">
+          </figure>
+        </section>
+        <section class="section-product">
+          <figure>
+            <img src="./img/product10.jpg">
+          </figure>
+        </section>
+        <section class="section-product">
+          <figure>
+            <img src="./img/product11.jpg">
+          </figure>
+        </section>
+        <section class="section-product">
+          <figure>
+            <img src="./img/product12.jpg">
+          </figure>
+        </section>
+      </section>
+    </main>
+    <footer>
+      <p>&copy; 2018 - Mattis Meeuwesse - Inholland</p>
+    </footer>
+  </body>
