--- a/contact.html
+++ b/contact.html
@@ -1,42 +1,100 @@
-COMPANY NAME
-Home
-Product
-Contact
-More information
-<form action="nowhere.php" method="post">
-	<fieldset>
-		<label >Select topic</label>
-		<select>
-			<option value="general">General inquiries</option>
-			<option value="press">Press relations</option>
-			<option value="recruitement">Recruitement</option>
-		</select>
-	</fieldset>
-	<fieldset class="contactFormFieldset">
-		<input
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+	<meta charset="UTF-8">
+	<meta name="keywords" content="Mobile, Board, Console, Games, Gaming, Fun, Products, Entertainment, Playstation, Android">
+	<meta name="description" content="Entertainment">
+	<meta name="author" content="Mattis Meeuwesse">
+
+
+	<title>Contact - Company name</title>
+
+	<link rel="stylesheet" type="text/css" href="css/contact.css">
+
+
+	<link rel="apple-touch-icon" sizes="57x57" href="./favicons/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="./favicons/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="./favicons/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="./favicons/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="./favicons/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="./favicons/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="./favicons/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="./favicons/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="./favicons/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./favicons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="./favicons/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png">
+	<link rel="manifest" href="./favicons/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="./favicons/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+	<meta name="viewport" content="width=device-width">
+</head>
+<body>
+
+	<video autoplay muted loop poster="./img/background.jpeg" id="backgroundVideo">
+		<source src="./movie/background.mp4" type="video/mp4">
+	</video>
+
+	<header class="banner-top">
+		<h1>COMPANY NAME</h1>
+	</header>
+
+	<nav class="navigation-bar">
+		<a href="./index.html" class="no-underline">Home</a>
+		<a href="./product.html" class="no-underline">Product</a>
+		<a href="https://www.blogger.com" class="no-underline">Blog</a>
+	</nav>
+
+	<section class="section-header collapsed-medium">
+		<h2>Contact</h2>
+	</section>
+
+	<section class="form-container">
+
+		<p class="collapsed-medium">More information</p>
+
+		<form action="nowhere.php" method="post">
+			<fieldset class="input-field">
+				<label>Select topic</label>
+				<select>
+					<option value="general">General inquiries</option>
+					<option value="press">Press relations</option>
+					<option value="recruitement">Recruitement</option>
+				</select>
+			</fieldset>
+			<fieldset class="contactFormFieldset">
+				<input
 				type="text"
 				name="contactFormName"
 				placeholder="Your name.."
-		/>
-	</fieldset>
-	<fieldset class="contactFormFieldset">
-		<input
+				/>
+			</fieldset>
+			<fieldset class="contactFormFieldset">
+				<input
 				type="email"
 				name="email"
 				placeholder="Your email.."
-		/>
-	</fieldset>
-	<fieldset>
-		<textarea
+				/>
+			</fieldset>
+			<fieldset>
+				<textarea
 				rows="7"
 				cols="40"
 				name="message"
 				placeholder="Write something.."
-		></textarea>
-	</fieldset>
-	<input
+				></textarea>
+			</fieldset>
+			<input class="submit-button" 
 			type="submit"
 			value="Submit"
-	/>
-</form>
-2018 - Mattis Meeuwesse - Inholland 
+			/>
+		</form>
+	</section>
+	<footer>
+		<p>&copy; 2018 - Mattis Meeuwesse - Inholland</p>
+	</footer>
+</body>
