--- a/product.html
+++ b/product.html
@@ -1,6 +1,125 @@
-COMPANY NAME
-Home
-Blog
-Contact
-product catalog
-2018 - Mattis Meeuwesse - Inholland 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+  <meta charset="UTF-8">
+  <meta name="keywords" content="Mobile, Board, Console, Games, Gaming, Fun, Products, Entertainment, Playstation, Android">
+  <meta name="description" content="Entertainment">
+  <meta name="author" content="Mattis Meeuwesse">
+
+
+  <title>Products - Company name</title>
+
+  <link rel="stylesheet" type="text/css" href="css/product.css">
+
+              <!-- Where the favicons are generated -->
+  <link rel="apple-touch-icon" sizes="57x57" href="./favicons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="./favicons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="./favicons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="./favicons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="./favicons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="./favicons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="./favicons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="./favicons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="./favicons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="./favicons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png">
+  <link rel="manifest" href="./favicons/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="./favicons/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="viewport" content="width=device-width">
+</head>
+
+<body>
+              <!-- get the video for the background -->
+  <video autoplay muted loop poster="./img/background.jpeg" id="backgroundVideo">
+    <source src="./movie/background.mp4" type="video/mp4">
+  </video>
+
+  <header class="banner-top">
+    <h1>COMPANY NAME</h1>
+  </header>
+
+  <nav class="navigation-bar">
+    <a href="./index.html" class="no-underline">home</a>
+    <a href="https://www.blogger.com" class="no-underline">blog</a>
+    <a href="./contact.html" class="no-underline">contact</a>
+  </nav>
+  <main>
+    <section class="section-header">
+      <h2>Product catalog</h2>
+    </section>
+    <section class="mobile-section-header"> <!-- generate the section header with different text for mobile version -->
+      <h2>products</h2>
+    </section>
+    <section class="section-container">
+      <section class="section-product">
+        <figure>
+          <img src="./img/product1.jpg" alt="Finished rubiks cube" title="Rubiks cube">
+        </figure>
+      </section>
+      <section class="section-product">
+        <figure>
+          <img src="./img/product2.jpg" alt="Small foam village from The Walls game" title="City gateway game The walls">
+        </figure>
+      </section>
+      <section class="section-product">
+        <figure>
+          <img src="./img/product3.jpg" alt="Mario, Luigi & Yoshi" title="Nintendo game characters">
+        </figure>
+      </section>
+      <section class="section-product">
+        <figure>
+          <img src="./img/product4.jpg" alt="Credit chips, dice and playing cards" title="Card game paraphernalia">
+        </figure>
+      </section>
+      <section class="section-product">
+        <figure>
+          <img src="./img/product5.jpg" alt="Chess piece King with fallen over pieces in the background" title="Chess pieces">
+        </figure>
+      </section>
+      <section class="section-product">
+        <figure>
+          <img src="./img/product6.jpg" alt="Four pawns in a row" title="Four pawns">
+        </figure>
+      </section>
+      <section class="section-product">
+        <figure>
+          <img src="./img/product7.jpg" alt="Darting darts stuck in a dartboard" title="Darts">
+        </figure>
+      </section>
+      <section class="section-product">
+        <figure>
+          <img src="./img/product8.jpg" alt="Mobile phone in hand with game playing" title="Mobile phone games">
+        </figure>
+      </section>
+      <section class="section-product">
+        <figure>
+          <img src="./img/product9.jpg" alt="Controller for modern game console" title="Console game controller">
+        </figure>
+      </section>
+      <section class="section-product">
+        <figure>
+          <img src="./img/product10.jpg" alt="Controller for super nintendo" title="Super nintendo controller">
+        </figure>
+      </section>
+      <section class="section-product">
+        <figure>
+          <img src="./img/product11.jpg" alt="Throwing balls for points arcade game" title="Arcade hall game">
+        </figure>
+      </section>
+      <section class="section-product">
+        <figure>
+          <img src="./img/product12.jpg" alt="Ball being thrown in beer pong drinking game" title="Beer pong drinking game">
+        </figure>
+      </section>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2018 - Mattis Meeuwesse - Inholland</p>
+  </footer>
+</body>
